--- a/app/src/home/sass/intro-anim.sass
+++ b/app/src/home/sass/intro-anim.sass
@@ -1,14 +1,10 @@
+@import fonts
+
 $color-dark: #000
 $color-light: #fff
 
 *
   box-sizing: border-box
-
-@font-face
-  font-family: Charter
-  font-style: normal
-  font-weight: bold
-  src: url('http://cdn.darrenshan.com/fonts/Charis-SIL/CharisSILB.ttf')
 
 
 .letter-main
