Move some stuff around
Don't keep SASS separated from other assets

--- a/app/src/home/fonts.sass
+++ b/app/src/home/fonts.sass
@@ -2,4 +2,4 @@
   font-family: Charter
   font-style: normal
   font-weight: bold
-  src: url('../fonts/CharisSIL-B.ttf')
+  src: url('/build/fonts/CharisSIL-B.ttf')
