Move box-sizing: border-box to main SASS file

--- a/app/src/home/main.sass
+++ b/app/src/home/main.sass
@@ -3,6 +3,11 @@
 $color-dark: #000
 $color-light: #fff
 
+*,
+*::before,
+*::after
+  box-sizing: border-box
+
 body
   background-color: $color-dark
   color: $color-light
