Remove unnecessary extra animation container

--- a/app/src/home/intro-animation/intro-anim.sass
+++ b/app/src/home/intro-animation/intro-anim.sass
@@ -184,13 +184,12 @@
       animation: none
 
 
-#corners-anim-container-1
+#corners-anim-container
   animation-fill-mode: forwards
   animation: corners-spin-5 1s 2s ease, corners-spin-back-6 .75s 3s ease
 
-#corners-anim-container-2
-  opacity: 1
-  animation: corners-blink-8 .075s 5s alternate 6
 
+
+// Import keyframe animation definitions
 
 @import intro-anim-keyframes
