Allow triggering animation by tapping instead of holding on iOS

--- a/app/src/home/intro-animation/intro-anim.sass
+++ b/app/src/home/intro-animation/intro-anim.sass
@@ -205,7 +205,7 @@
           animation: none
 
       // Make all animations play on click
-      &:active
+      &:hover
         transform: none
 
         // Play click and blink animations
