Add method for running code after logo interaction animation is finished
Delays interaction event by amount of time the resulting animations take to play

--- a/app/src/home/intro-animation/intro-anim.sass
+++ b/app/src/home/intro-animation/intro-anim.sass
@@ -208,7 +208,7 @@
       &:hover
         transform: none
 
-        // Play click and blink animations
+        // Play blink animation after hover animation
         animation: corners-blink .075s .6s 6 alternate
 
         // Play hover animation first
