Handle the small shrink before the zoom using a keyframe, not a timing function

--- a/app/src/home/intro-animation/intro-anim.sass
+++ b/app/src/home/intro-animation/intro-anim.sass
@@ -245,7 +245,7 @@
     animation-fill-mode: forwards
 
   .letter-main
-    animation: letter-scale 1s cubic-bezier(.75, -.025, .71, .12)
+    animation: letter-scale 1s ease-in
     animation-fill-mode: forwards
 
 // Import keyframe animation definitions
