--- a/app/src/home/intro-animation/intro-anim-keyframes.sass
+++ b/app/src/home/intro-animation/intro-anim-keyframes.sass
@@ -175,6 +175,9 @@ $corner-anim-distance: 25%
     transform: translate(-50%, -52.5%)
     transform-origin: 46.3% 51.5%
 
+  25%
+    transform: translate(-50%, -52.5%) scale(.9)
+
   to
     transform: translate(-50%, -52.5%) scale(100)
     visibility: hidden
