No reason to keep keyframes import at the end

--- a/app/src/home/intro-animation/intro-anim.sass
+++ b/app/src/home/intro-animation/intro-anim.sass
@@ -1,4 +1,8 @@
+// Import global colors and fonts
 @import '../main.sass'
+
+// Import keyframe animation definitions
+@import intro-anim-keyframes
 
 
 // The letter A in the logo.
@@ -247,7 +251,3 @@
   .letter-main
     animation: letter-scale 1s ease-in
     animation-fill-mode: forwards
-
-// Import keyframe animation definitions
-
-@import intro-anim-keyframes
