--- a/app/src/home/intro-animation/intro-anim.sass
+++ b/app/src/home/intro-animation/intro-anim.sass
@@ -245,7 +245,7 @@
 
 #animated-logo.clicked
   #corners
-    animation: fade-out 1s
+    animation: fade-out .5s .25s
     animation-fill-mode: forwards
 
   .letter-main
