Begin groundwork for cascading fade in animation

--- a/app/src/home/main.sass
+++ b/app/src/home/main.sass
@@ -11,3 +11,16 @@ $color-light: #fff
 body
   background-color: $color-dark
   color: $color-light
+  margin: 0
+
+@import top-bar
+
+
+#content-main
+  display: none
+
+  &.visible
+    display: block
+
+  *
+    transition: opacity .5s
