Add cards as an example of cascading

--- a/app/src/home/main.sass
+++ b/app/src/home/main.sass
@@ -23,5 +23,13 @@ body
     display: block
 
   *[data-fade]
-    transition: opacity .5s
+    transition: opacity 1.5s
     opacity: 0
+
+
+.card
+  background: $color-light
+  width: 31vw
+  height: 31vw
+  float: left
+  margin: 1vw
