--- a/app/src/home/top-bar.sass
+++ b/app/src/home/top-bar.sass
@@ -31,3 +31,24 @@
       text-transform: uppercase
 
       margin-left: 30px
+
+      // Hover effect
+
+      position: relative
+
+      &::after
+        content: ''
+        width: 100%
+        height: 1.5px
+        position: absolute
+        left: 0
+        bottom: 0
+        background-color: $color-light
+        transform: scaleX(0)
+        transform-origin: bottom right
+        transition: transform .4s cubic-bezier(.215, .61, .355, 1)
+
+      &:hover
+        &::after
+          transform: scaleX(1)
+          transform-origin: bottom left
