--- a/app/src/home/main.sass
+++ b/app/src/home/main.sass
@@ -25,3 +25,20 @@ body
   *[data-fade]
     transition: opacity 1.5s
     opacity: 0
+
+
+.headline
+  font-family: 'Montserrat'
+  font-weight: bold
+  text-transform: uppercase
+  font-size: 7vw
+  letter-spacing: .1vw
+  text-align: center
+
+  display: block
+  width: 100vw
+
+  position: absolute
+  left: 0
+  top: 50vh
+  transform: translateY(-50%)
