--- a/app/src/home/main.sass
+++ b/app/src/home/main.sass
@@ -42,3 +42,10 @@ body
   left: 0
   top: 50vh
   transform: translateY(-50%)
+
+  @media (orientation: portrait) and (max-width: 420px)
+    font-size: 25vw
+    text-align: left
+    width: auto
+    left: 50vw
+    transform: translate(-50%, -50%)
