--- a/app/src/home/top-bar.sass
+++ b/app/src/home/top-bar.sass
@@ -6,6 +6,10 @@
 
   padding: 10px 6vw 14px 50px
 
+  @media (orientation: portrait) and (max-width: 420px)
+    padding: 10px 0 14px 25px
+
+
   .letter-logo
     font-family: 'Charter'
     font-size: 30px
@@ -23,6 +27,11 @@
     height: 54px
     height: calc(44px + 2vh)
 
+    @media (orientation: portrait) and (max-width: 420px)
+      float: left
+      margin-left: 10px
+
+
     a
       color: $color-light
       text-decoration: none
@@ -30,7 +39,7 @@
       font-family: 'Open Sans' sans-serif
       text-transform: uppercase
 
-      margin-left: 30px
+      margin-left: 20px
 
       // Hover effect
 
