Clouds on bottom of main page

--- a/app/src/home/main.sass
+++ b/app/src/home/main.sass
@@ -49,3 +49,11 @@ body
     width: auto
     left: 50vw
     transform: translate(-50%, -50%)
+
+
+img
+  width: 100%
+  height: auto
+  position: absolute
+  top: 100vh
+  transform: translateY(-50%)
