Hide clouds on portrait

--- a/app/src/home/main.sass
+++ b/app/src/home/main.sass
@@ -57,3 +57,7 @@ img
   position: absolute
   top: 100vh
   transform: translateY(-50%)
+
+  // This looks like shit in portrait
+  @media (orientation: portrait)
+    display: none
