--- a/app/src/home/fonts.sass
+++ b/app/src/home/fonts.sass
@@ -5,4 +5,4 @@
   font-family: Charter
   font-style: normal
   font-weight: bold
-  src: url('/build/fonts/CharisSIL-B.ttf')
+  src: url('/fonts/CharisSIL-B.ttf')
