--- a/app/src/home/main.sass
+++ b/app/src/home/main.sass
@@ -38,7 +38,7 @@ body
   display: block
   width: 100vw
 
-  position: absolute
+  position: fixed
   left: 0
   top: 50vh
   transform: translateY(-50%)
