--- a/app/src/home/top-bar.sass
+++ b/app/src/home/top-bar.sass
@@ -6,6 +6,12 @@
 
   padding: 10px 6vw 14px 50px
 
+  opacity: 0
+  transition: opacity 1.5s
+
+  &.visible
+    opacity: 1
+
   @media (orientation: portrait) and (max-width: 420px)
     padding: 10px 5vw 14px 25px
 
