Prevent the clouds image from acting like an image

--- a/app/src/home/main.sass
+++ b/app/src/home/main.sass
@@ -61,6 +61,9 @@ img
   top: 100vh
   z-index: 1
 
+  pointer-events: none
+  -webkit-touch-callout: none
+
   // Pre-build properties: blurry, transparent, and not transformed into view.
   transform: none
   opacity: 0
