Fix the font name that's been wrong this whole time

--- a/app/src/home/fonts.sass
+++ b/app/src/home/fonts.sass
@@ -2,7 +2,7 @@
 
 
 @font-face
-  font-family: Charter
+  font-family: Charis
   font-style: normal
   font-weight: bold
   src: url('/fonts/CharisSIL-B.ttf')
