--- a/app/src/home/intro-animation/intro-anim.sass
+++ b/app/src/home/intro-animation/intro-anim.sass
@@ -9,7 +9,7 @@
 
 .letter-main
   color: $color-light
-  font-family: Charter
+  font-family: Charis
   font-weight: bold
   display: block
   position: absolute
