--- a/app/src/home/top-bar.sass
+++ b/app/src/home/top-bar.sass
@@ -18,7 +18,7 @@
 
 
   .letter-logo
-    font-family: 'Charter'
+    font-family: 'Charis'
     font-size: 30px
     font-size: calc(20px + 2vh)
     font-weight: bold
