--- a/app/src/home/main.sass
+++ b/app/src/home/main.sass
@@ -58,14 +58,25 @@ img
   width: 100%
   height: auto
   position: absolute
-  top: 100vh
+  // 100vh minus half the height of the image. The following proportion is used to find the height
+     of the image:
+  //
+     2100 (image width)      100vw (browser window width)
+     -------------------  =  ----------------------------
+     1500 (image height)      ? (image hight in browser)
+   //
+      This can be rearranged to give us the formula (1500 * 100vw / 2100) to find the image height.
+      Next, we divide this by two, so we have (1500 * 100vw / 2100 / 2), or (1500 * 100vw / 4200).
+      Finally this is subtracted from 100vh to give us the vertical position of the image.
+
+  top: calc(100vh - 1500 * 100vw / 4200)
   z-index: 1
 
   pointer-events: none
   -webkit-touch-callout: none
 
   // Pre-build properties: blurry, transparent, and not transformed into view.
-  transform: none
+  transform: translateY(50%)
   opacity: 0
   filter: blur(20px)
 
@@ -74,7 +85,7 @@ img
 
   &.visible
     opacity: 1
-    transform: translateY(-50%)
+    transform: none
     filter: none
 
 
