--- a/app/src/home/main.sass
+++ b/app/src/home/main.sass
@@ -37,7 +37,7 @@ body
   position: fixed
   left: 0
   top: 50vh
-  z-index: 2
+  z-index: 1
   transform: translateY(-50%)
 
   @media (orientation: portrait) and (max-width: 420px)
@@ -54,9 +54,7 @@ body
     opacity: 1
 
 
-img
-  width: 100%
-  height: auto
+section.white-section
   position: absolute
   // 100vh minus half the height of the image. The following proportion is used to find the height
      of the image:
@@ -70,25 +68,37 @@ img
       Finally this is subtracted from 100vh to give us the vertical position of the image.
 
   top: calc(100vh - 1500 * 100vw / 4200)
-  z-index: 1
+  z-index: 2
 
-  pointer-events: none
-  -webkit-touch-callout: none
+  img
+    width: 100%
+    height: auto
+    margin-bottom: -1vw
 
-  // Pre-build properties: blurry, transparent, and not transformed into view.
-  transform: translateY(50%)
-  opacity: 0
-  filter: blur(20px)
+    pointer-events: none
+    -webkit-touch-callout: none
 
-  // During the build, the clouds will slide up, fade in, and sharpen all at the same time
-  transition: transform 3s, opacity 5s, filter 5s
+    // Pre-build properties: blurry, transparent, and not transformed into view.
+    transform: translateY(50%)
+    opacity: 0
+    filter: blur(20px)
 
-  &.visible
-    opacity: 1
-    transform: none
-    filter: none
+    // During the build, the clouds will slide up, fade in, and sharpen all at the same time
+    transition: transform 3s, opacity 5s, filter 5s
+
+    &.visible
+      opacity: 1
+      transform: none
+      filter: none
+
+    // This looks like shit in portrait, so hide it
+    @media (orientation: portrait)
+      display: none
 
 
-  // This looks like shit in portrait, so hide it
-  @media (orientation: portrait)
-    display: none
+  div
+    background-color: darken($color-light, 1)
+    width: 100vw
+    height: 100vh
+
+    transform: translateY(-2px)
