--- a/app/src/home/main.sass
+++ b/app/src/home/main.sass
@@ -53,6 +53,7 @@ body
   &.visible
     opacity: 1
 
+
 // The following proportion is used to find the height of the image:
 //
    2100 (image width)      100vw (browser window width)
@@ -61,6 +62,7 @@ body
  // This can be rearranged to give us the formula (1500 * 100vw / 2100) to find the image height.
 $mist-image-height: 1500 * 100vw / 2100
 $half-mist-image-height: $mist-image-height / 2
+
 
 section.white-section
   position: absolute
@@ -97,8 +99,8 @@ section.white-section
   div.mist-gradient
     position: absolute
     display: block
-    top: 0
-    height: $mist-image-height
+    top: 1 / 3 * $mist-image-height
+    height: 2 / 3 * $mist-image-height
     width: 100vw
     background: linear-gradient(transparent, $color-light)
 
