--- a/app/src/home/main.sass
+++ b/app/src/home/main.sass
@@ -75,7 +75,7 @@ section.white-section
   opacity: 0
   filter: blur(20px)
 
-  // During the build, the clouds will slide up, fade in, and sharpen all at the same time
+  // During the build, the mist will slide up, fade in, and sharpen all at the same time
   transition: transform 3s, opacity 4s, filter 4s
 
   &.visible
@@ -90,6 +90,11 @@ section.white-section
 
     pointer-events: none
     -webkit-touch-callout: none
+
+    &.secondary,
+    &.tertiary
+      position: absolute
+      top: 0
 
     // This looks like shit in portrait, so hide it
     @media (orientation: portrait)
