--- a/app/src/home/fonts.sass
+++ b/app/src/home/fonts.sass
@@ -5,4 +5,4 @@
   font-family: Charis
   font-style: normal
   font-weight: bold
-  src: url('/fonts/charissil-b-webfont.woff2') format('woff2'), url('/fonts/charissil-b-webfont.woff') format('woff')
+  src: local('Charis'), url('/fonts/charissil-b-webfont.woff2') format('woff2'), url('/fonts/charissil-b-webfont.woff') format('woff'), url('/fonts/CharisSIL-B.ttf') format('ttf')
