--- a/app/src/404/main.sass
+++ b/app/src/404/main.sass
@@ -25,3 +25,16 @@ h1
   color: $white
   font-family: 'Montserrat'
   text-transform: uppercase
+
+canvas
+  position: fixed
+  top: 0
+  left: 0
+
+.vignette
+  position: fixed
+  top: 0
+  left: 0
+  width: 100vw
+  height: 100vh
+  box-shadow: inset 0 0 25vw 10vw $black
