Give only 404 page body position: fixed
This automatically fixes everything

--- a/app/src/404/main.sass
+++ b/app/src/404/main.sass
@@ -10,9 +10,10 @@ $white: #fff
 body
   background-color: $black
   margin: 0
+  position: fixed
 
 h1
-  position: fixed
+  position: absolute
   top: 0
   left: 0
 
@@ -27,12 +28,12 @@ h1
   text-transform: uppercase
 
 canvas
-  position: fixed
+  position: absolute
   top: 0
   left: 0
 
 .vignette
-  position: fixed
+  position: absolute
   top: 0
   left: 0
   width: 100vw
