--- a/app/src/home/top-bar.sass
+++ b/app/src/home/top-bar.sass
@@ -41,6 +41,7 @@
 
       font-family: 'Open Sans' sans-serif
       text-transform: uppercase
+      font-size: calc(6px + 1vh)
 
       @media (orientation: portrait) and (max-width: 420px)
         font-size: calc(10px + 2vw)
@@ -51,7 +52,7 @@
 
       position: relative
 
-      &::after
+      &:not(.ion)::after
         content: ''
         width: 100%
         height: 1.5px
@@ -63,10 +64,22 @@
         transform-origin: bottom right
         transition: transform .4s cubic-bezier(.215, .61, .355, 1), background-color .5s
 
-      &:hover
+      &:not(.ion):hover
         &::after
           transform: scaleX(1)
           transform-origin: bottom left
+
+      &.ion
+        font-size: calc(15px + 2vh)
+        transition: transform .2s
+
+        @media (orientation: portrait) and (max-width: 420px)
+          font-size: calc(20px + 2vw)
+
+
+        &:hover
+          transform: scale(1.15)
+
 
 .top-bar.black
   color: $color-dark
