--- a/app/src/home/top-bar.sass
+++ b/app/src/home/top-bar.sass
@@ -34,6 +34,9 @@
     height: 54px
     height: calc(44px + 2vh)
 
+    @media (orientation: portrait) and (max-width: 420px)
+      display: none
+
 
     a
       color: inherit
