Add hamburger menu icon

--- a/app/src/home/top-bar.sass
+++ b/app/src/home/top-bar.sass
@@ -34,9 +34,6 @@
     height: 54px
     height: calc(44px + 2vh)
 
-    @media (orientation: portrait) and (max-width: 420px)
-      display: none
-
 
     a
       color: inherit
@@ -82,6 +79,13 @@
 
         &:hover
           transform: scale(1.15)
+
+    button
+      border: 0
+      font-size: calc(15px + 2vh)
+      color: $color-light
+      background: none
+      cursor: pointer
 
 
 .top-bar.black
