Let hamburger icon change colors after scrolling

--- a/app/src/home/top-bar.sass
+++ b/app/src/home/top-bar.sass
@@ -86,7 +86,7 @@
     button
       border: 0
       font-size: calc(15px + 2vh)
-      color: $color-light
+      color: inherit
       background: none
       cursor: pointer
 
