Rotate hamburger icon when it's clicked

--- a/app/src/home/top-bar.sass
+++ b/app/src/home/top-bar.sass
@@ -90,6 +90,11 @@
       background: none
       cursor: pointer
 
+      transition: .25s transform
+
+      &.open
+        transform: rotate(90deg)
+
 
 .top-bar.black
   color: $color-dark
