Add a mobile-menu.sass file

--- a/app/src/home/top-bar.sass
+++ b/app/src/home/top-bar.sass
@@ -94,6 +94,7 @@
 // This looks like it's part of the top bar but it can't be a child because it needs a z-index
    higher than that of top-bar
 
+// TODO: opacity and color fade effects
 button.ion.ion-md-menu
   position: fixed
   z-index: 6
