Begin styling mobile menu

--- a/app/src/home/mobile-menu.sass
+++ b/app/src/home/mobile-menu.sass
@@ -1,4 +1,19 @@
+@import './main.sass'
+
 .mobile-menu
   position: fixed
   top: 0
   left: 0
+  width: 100vw
+  height: 100vh
+  z-index: 4
+
+  -webkit-backdrop-filter: blur(10px)
+
+  background: transparentize($color-dark, .25)
+
+  opacity: 0
+  transition: opacity .5s
+
+  &.open
+    opacity: 1
