Add padding to mobile menu

--- a/app/src/home/mobile-menu.sass
+++ b/app/src/home/mobile-menu.sass
@@ -9,8 +9,10 @@
   z-index: 4
 
   -webkit-backdrop-filter: blur(10px)
-
   background: transparentize($color-dark, .25)
+
+  padding: 84px 10px 10px
+  padding: calc(68px + 2vh) 5vw 0
 
   opacity: 0
   transition: opacity .5s
