--- a/app/src/home/mobile-menu.sass
+++ b/app/src/home/mobile-menu.sass
@@ -19,3 +19,20 @@
 
   &.open
     opacity: 1
+
+  ul
+    list-style-type: none
+    padding: 0
+    margin: 0
+
+    li
+      text-align: center
+      margin-bottom: 5vh
+
+      a
+        color: $color-light
+
+        text-decoration: none
+        font-family: 'Open Sans' sans-serif
+        text-transform: uppercase
+        font-size: calc(10px + 2vh)
