Fade in mobile menu links one by one

--- a/app/src/home/mobile-menu.sass
+++ b/app/src/home/mobile-menu.sass
@@ -36,3 +36,9 @@
         font-family: 'Open Sans' sans-serif
         text-transform: uppercase
         font-size: calc(10px + 2vh)
+
+        opacity: 0
+        transition: opacity 1.5s
+
+        &.visible
+          opacity: 1
