Add info on the members of Arkis

--- a/app/src/home/main.sass
+++ b/app/src/home/main.sass
@@ -15,6 +15,7 @@ body
   margin: 0
 
 @import top-bar
+@import person-info
 
 
 #content-main
@@ -113,3 +114,4 @@ section.white-section
     background-color: $color-light
     width: 100vw
     height: 100vh
+    color: $color-dark
