Top and bottom padding on white section div

--- a/app/src/home/main.sass
+++ b/app/src/home/main.sass
@@ -113,5 +113,6 @@ section.white-section
   div.white
     background-color: $color-light
     width: 100vw
-    height: 100vh
     color: $color-dark
+
+    padding: 15vh 0
