--- a/app/src/home/main.sass
+++ b/app/src/home/main.sass
@@ -25,11 +25,37 @@ body
     display: block
 
 
-.headline
+h1,
+h2,
+h3,
+h4,
+h5
   font-family: 'Montserrat'
   font-weight: bold
+
+  &.center
+    text-align: center
+
+h1,
+h2
   text-transform: uppercase
+
+h1
   font-size: 7vw
+
+h2
+  font-size: 6vw
+
+h3
+  font-size: 5vw
+
+h4
+  font-size: 4vw
+
+h5
+  font-size: 3vw
+
+.headline
   letter-spacing: .1vw
   text-align: center
 
