--- a/app/src/home/main.sass
+++ b/app/src/home/main.sass
@@ -32,6 +32,7 @@ h4,
 h5
   font-family: 'Montserrat'
   font-weight: bold
+  margin: .5em 0
 
   &.center
     text-align: center
@@ -143,4 +144,5 @@ section.white-section
     width: 100vw
     color: $color-dark
 
-    padding: 15vh 0
+    overflow: auto
+    padding-bottom: 15vh
