Add letter logo to right of footer

--- a/app/src/home/footer.sass
+++ b/app/src/home/footer.sass
@@ -4,7 +4,19 @@ footer
   color: $color-light
 
   font-family: 'Open Sans'
-  padding: 10vh 10vw
 
   @media (max-width: 500px)
     padding: 5vw
+
+
+  .left
+    float: left
+    margin: 10vh 0 10vh 10vw
+
+  .footer-logo
+    float: right
+    font-size: calc(4vw + 1em)
+    font-family: 'Charis'
+    top: 0
+    transform: translateY(-2.5%)
+    margin: 10vh 10vw 10vh 0
