Add github links for everybody

--- a/app/src/home/person-info.sass
+++ b/app/src/home/person-info.sass
@@ -64,8 +64,13 @@
       span
         margin-right: .5em
 
+      i.ion
+        font-size: 1.5em
+
       i.ion-logo-twitter
         $twitter-color: #00aced
         color: $twitter-color
 
-        font-size: 1.5em
+      i.ion-logo-github
+        $github-color: #000
+        color: $github-color
