More generous margins

--- a/app/src/home/person-info.sass
+++ b/app/src/home/person-info.sass
@@ -41,8 +41,6 @@
       width: 200px
       height: auto
 
-      margin-bottom: 5%
-
       border-radius: 50%
 
       filter: grayscale(75%) brightness(.95)
@@ -52,6 +50,8 @@
       font-weight: 700
       font-size: 25px
       text-align: center
+      
+      margin: .3em 0
 
     a
       color: inherit
