More semantic markup

--- a/app/src/home/main.sass
+++ b/app/src/home/main.sass
@@ -15,7 +15,7 @@ body
   margin: 0
 
 @import top-bar
-@import person-info
+@import member-info
 @import footer
 
 
@@ -133,11 +133,3 @@ div.mist-gradient
   $c11: transparentize($color-light,   0)
 
   background: linear-gradient($c1 0%, $c2 10%, $c3 20%, $c4 30%, $c5 40%, $c6 50%, $c7 60%, $c8 70%, $c9 80%, $c10 90%, $c11 100%)
-
-
-div.white
-  background-color: $color-light
-  width: 100vw
-  color: $color-dark
-
-  overflow: auto
