--- a/app/src/home/member-info.sass
+++ b/app/src/home/member-info.sass
@@ -1,4 +1,12 @@
-.person-container
+.team-section
+  background-color: $color-light
+  width: 100vw
+  color: $color-dark
+
+  overflow: auto
+
+
+.cards-container
   display: flex
   flex-wrap: wrap
   justify-content: space-around
@@ -8,7 +16,7 @@
 
   padding: 15px
 
-  .person-info
+  .member-info
     $shadow-color: rgba(0, 0, 0, .16)
 
     background-color: $color-light
@@ -50,7 +58,7 @@
       font-weight: 700
       font-size: 25px
       text-align: center
-      
+
       margin: .3em 0
 
     a
