Create class for header caps

--- a/app/src/home/main.sass
+++ b/app/src/home/main.sass
@@ -40,9 +40,9 @@ h5
   &.center
     text-align: center
 
-h1,
-h2
-  text-transform: uppercase
+  &.caps
+    text-transform: uppercase
+
 
 h1
   font-size: 6vw
@@ -62,7 +62,6 @@ h5
 .headline
   font-size: 7vw
   letter-spacing: .1vw
-  text-align: center
 
   display: block
   width: 100vw
